examples/errors/undefined-variable.tw
# Error: referencing undefined variable
x:i32 = y
panic
